# llm-crosscheck-ai-svc

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
examples/: README.md  basic_usage.py
prompts/common/: base_structure.j2
prompts/crosscheck/: response_validation.j2
prompts/system/: assistant.j2
prompts/tasks/: code_review.j2
src/llm_crosscheck/: __init__.py
src/llm_crosscheck/api/: main.py
src/llm_crosscheck/config/: settings.py
src/llm_crosscheck/core/: database.py  logging.py  middleware.py  prompt_engine.py
src/llm_crosscheck/exceptions/: exceptions.py
src/llm_crosscheck/llms/: __init__.py  anthropic_llm.py  base.py  factory.py  openai_llm.py
src/llm_crosscheck/models/: __init__.py  audit.py  base.py  llm_requests.py  templates.py
src/llm_crosscheck/routers/: auth.py  crosscheck.py  metrics.py
src/llm_crosscheck/schemas/: __init__.py  llm.py
src/llm_crosscheck/services/: crosscheck_service.py  llm_manager.py
